--- a/index.html
+++ b/index.html
@@ -8,16 +8,36 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="teachingtool">
+  <meta name="apple-mobile-web-app-title" content="synthesissoftware_pos">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/png" href="favicon.png"/>
 
-  <title>teachingtool</title>
+  <title>synthesissoftware_pos</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+<script src="https://www.gstatic.com/firebasejs/7.9.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.9.1/firebase-firestore.js"></script>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyDW4olT5Tc_2sO8tFnCSXz1UvtCSekAfwI",
+    authDomain: "synthesis-software-pos.firebaseapp.com",
+    databaseURL: "https://synthesis-software-pos.firebaseio.com",
+    projectId: "synthesis-software-pos",
+    storageBucket: "synthesis-software-pos.appspot.com",
+    messagingSenderId: "340799268585",
+    appId: "1:340799268585:web:d7cbf23c5098fd20ad7278",
+    measurementId: "G-HMHF5CJGG5"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
@@ -29,5 +49,7 @@
     }
   </script>
   <script src="main.dart.js" type="application/javascript"></script>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+
 </body>
 </html>
